--- a/src/app/set-advanced-search/set-advanced-search.component.html
+++ b/src/app/set-advanced-search/set-advanced-search.component.html
@@ -1,1 +1,37 @@
-<p>set-advanced-search works!</p>
+
+ <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 d-flex align-items-center mb-2 mt-3">
+    <div class="set-search-panel set--depth__1 set-w-100">
+        <div class="set_flex--container h-100">
+            
+            <div class="set_flex__item ma_flex__item--vcenter p70 search-col">
+                <mat-form-field class="w-100 ml-3" appearance="none" floatLabel="never">
+                    <!-- <mat-label>Search</mat-label> -->
+                    <input matInput placeholder="Search" value="">
+                  </mat-form-field>
+            </div>
+            <div class="set_flex__item set_flex__item--vcenter set_flex__item--inherit cat-select-col">
+                <button mat-icon-button [matMenuTriggerFor]="advancedsearchpopup">
+                    <mat-icon>arrow_drop_down</mat-icon>
+                  </button>
+
+                  <mat-menu class="advanced-search-popup" #advancedsearchpopup="matMenu" (click) = "$event.stopPropagation()">
+                      <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <mat-form-field class="" appearance="none" floatLabel="never">
+                            <mat-select>
+                                <mat-option value="option">Option</mat-option>
+                              </mat-select>
+                          </mat-form-field>
+                      </div>
+                      
+                    
+                  
+                  </mat-menu>
+
+
+            </div>
+            <div class="set_flex__item--inherit set_flex__item--vcenter p10">
+                <button class="btn-search" mat-button><i class="material-icons">search</i></button>
+            </div>
+        </div>
+    </div>
+</div>
