--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -4,9 +4,9 @@
             <mat-list-item class="library-logo-container">
                 <img src="../../assets/images/companylogo.png">
             </mat-list-item>
-            <mat-list-item role="listitem"><a routerLink="/ma-styl-guide" mat-button color="primary">Style Guide</a></mat-list-item>
-            <mat-list-item role="listitem"><a routerLink="/set-advanced-search" mat-button color="primary">Search</a></mat-list-item>
-            <mat-list-item role="listitem"><a routerLink="/set-search-config" mat-button color="primary">Search Config</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/stylguide" mat-button color="primary">Style Guide</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/advancedsearch" mat-button color="primary">Advanced Search</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/searchconfig" mat-button color="primary">Search Config</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/inner-header" mat-button color="primary">Inner Header</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/menu" mat-button color="primary">Menu</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/image-card-full" mat-button color="primary">Image Card Full</a></mat-list-item>
