--- a/src/styles/base/_colors.scss
+++ b/src/styles/base/_colors.scss
@@ -1,4 +1,4 @@
-$ma_color_white : #ffffff !default;
+$set_color_white : #ffffff !default;
 
 $red-50: #ffebee !default;
 $red-100: #ffcdd2 !default;
@@ -16,6 +16,8 @@ $red-A400: #ff1744 !default;
 $red-A700: #d50000 !default;
 $red: $red-700 !default;
 $red-danger: #f5766c !default;
+
+
 
 
 $pink-50: #fce4ec !default;
