--- a/src/app/set-advanced-search/set-advanced-search.component.html
+++ b/src/app/set-advanced-search/set-advanced-search.component.html
@@ -149,9 +149,9 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row mt-4">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div class="set_flex--container action-row">
+            <div class="set_flex--container action-row h-100">
                 <div class="set_flex__item set_flex__item--vcenter mx-3 p20">
                     <div class="set-txt-s2">
                         Show active
@@ -165,10 +165,10 @@
         </div>
 
         <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
-            <div class="set_flex--container action-row">
+            <div class="set_flex--container h-100 action-row">
                 <div class="set_flex__item set_flex__item--vcenter set_flex__item--hend mx-3 p20">
                     <button class="mx-3" mat-stroked-button>Clear Filters</button>
-                    <button mat-raised-button>Apply Filters</button>
+                    <button class="set-btn-bg__primary" mat-raised-button>Apply Filters</button>
                 </div>
  
             </div>   
