--- a/src/styles/abstracts/_variables-new.scss
+++ b/src/styles/abstracts/_variables-new.scss
@@ -85,7 +85,7 @@ $set_icon-btn-text-color__quinary:#ED3E84;
 $set_btn-bg-color:$set_color_white;
 
 
-$set_btn-bg-color__primary:#E91E63;
+$set_btn-bg-color__primary:#2196F3;
 $set_btn-bg-color__secondary:#FFDD00;
 $set_btn-bg-color__tertiary:#3fba74;
 $set_btn-bg-color__quaternary: #E0E0E0;
