--- a/src/styles/base/_typography-new.scss
+++ b/src/styles/base/_typography-new.scss
@@ -273,6 +273,8 @@ white-space: normal !important;
 
 .set-btn-bg__primary{
     background-color:$set_btn-bg-color__primary !important;
+color: #fff;
+
 }
 
 .set-btn-bg__secondary{
